# axum-starter

./: .env  Cargo.toml  README.md  application.yaml
src/: app.rs  common.rs  database.rs  error.rs  json.rs  latency.rs  main.rs  path.rs  query.rs  response.rs  server.rs  valid.rs
src/api/: auth.rs  mod.rs  user.rs
src/app/: auth.rs  common.rs  database.rs  enumeration.rs  error.rs  json.rs  middleware.rs  mod.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  valid.rs  validation.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: mod.rs  prelude.rs  sys_user.rs
src/utils/: crypt.rs  id.rs  mod.rs
