[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.11", features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "with-rust_decimal",
  "runtime-tokio",
] }
anyhow = "1.0.100"
axum = { version = "0.8.8", features = [
  "macros",
] }
config = { version = "0.15.19", features = [
  "yaml",
] }
serde = { version = "1.0.228", features = [
  "derive",
] }
tokio = { version = "1.45.0", features = [
  "full",
] }
tracing = { version = "0.1.44", features = [
  "async-await",
] }
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "chrono",
] }
num_cpus = "1.0"
thiserror = "2.0.17"
tower-http = { version = "0.6.8", features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
] }
xid = "1.1.1"
bytesize = "2.3.1"
validator = { version = "0.20.0", features = [
  "derive",
] }
axum-valid = { version = "0.24.0", features = [
  "full_validator",
] }
regex = "1.12.2"
idgenerator = "2.0.0"
bcrypt = "0.18.0"
jsonwebtoken = { version = "10.2.0", features = [
  "rust_crypto",
] }
